overlap sidebar when open to avoid image resizing resulting in scroll changes

--- a/app/index.css
+++ b/app/index.css
@@ -57,10 +57,6 @@ img {
 	left: 0;
 }
 
-.content.open {
-	left: 200px;
-}
-
 .sidebar-toggle.open {
 	visibility: hidden;
 	opacity: 0;
